backend list routes + frontend lists viewing and pagination

--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -6,6 +6,8 @@
 	"rules": {
 		"indent": ["error", "tab"],
 		"semi": ["error", "always"],
-		"quotes": ["error", "single"]
+		"quotes": ["error", "single"],
+		"jsx-quotes": ["error", "prefer-single"],
+		"react-hooks/exhaustive-deps": ["off"]
 	}
 }
